--- a/IT1/uke35/minforstenettside.html
+++ b/IT1/uke35/minforstenettside.html
@@ -20,3 +20,11 @@
 <li>mission impossible</li>
   </body>
 </html>
+
+
+<img src="lion-bilder-schwarz-weiss-l.jpg" width="300px"title="bilde av en løve" alt="bilde av en løve">
+
+
+<audio src="Farm_Morning_with_Sheep.mp3" autoplay controls loop></video>
+
+  <video src="Forest.mp4"controls width="300px"poster="lion-bilder-schwarz-weiss-l.jpg"></video>
