--- a/IT1/uke35/minforstenettside.html
+++ b/IT1/uke35/minforstenettside.html
@@ -18,13 +18,15 @@
 <li>pirates of the caribien</li>
 <li>Lord of the rings</li>
 <li>mission impossible</li>
-  </body>
-</html>
 
 
 <img src="lion-bilder-schwarz-weiss-l.jpg" width="300px"title="bilde av en løve" alt="bilde av en løve">
 
 
-<audio src="Farm_Morning_with_Sheep.mp3" autoplay controls loop></video>
+<audio src="Farm_Morning_with_Sheep.mp3" autoplay controls loop></audio>
 
   <video src="Forest.mp4"controls width="300px"poster="lion-bilder-schwarz-weiss-l.jpg"></video>
+
+
+  </body>
+</html>
