Lagde lenker til nettsiden

--- a/IT1/uke36/skjema.html
+++ b/IT1/uke36/skjema.html
@@ -8,7 +8,7 @@
     <h1>skjema</h1>
 
     <form action="registrer.html">
-<label> <h2>Registrerings til min konfirmasjon</h2> </label>
+<label> <h2>registrerings for min konfirmasjon</h2> </label>
 
 
      <label for="inputNavn">Navn:</label>
