--- a/IT1/uke36/tabeller.html
+++ b/IT1/uke36/tabeller.html
@@ -23,6 +23,17 @@
         <td>Triller</td><!--innholdt skrives i en td eliment-->
         <td>Michael Jackson</td>
         <td>1982</td>
+        <tr>
+          <td>Gods Plan</td>
+          <td>Drake</td>
+          <td>2017</td>
+          <tr>
+            <td>Alive</td>
+            <td>Neptunica</td>
+            <td>2018</td>
+          </tr>
+
+        </tr>
         <td> <a href="https://vg.no">link her</a> </td>
       </tr>
     </tbody>
