--- a/IT1/uke36/index.html
+++ b/IT1/uke36/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <h1>uke 36</h1>
-  
+
 
     <ul>
     <li><a href="https://www.vg.no"target=""></a>
     <li><a href="#"></a>
+    <li> <a href="skjema.html">skjema</a></li>
     </ul>
   </body>
 </html>
