--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -23,7 +23,92 @@
     <li> <a href="Fantasy">Fantasy</a> </li>
   </ul>
 
+  <header>
 
+
+
+
+
+  </header>
+
+  <main>
+
+
+<section class="Middelssak">
+<a href="#">
+  <img src="California.jpg" alt="">
+  <h2>Best book of the century #1</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Trump.jpg" alt="">
+  <h2>Best seller #2</h2>
+</a>
+
+
+</section>
+
+
+<section class="Litensak">
+<a href="trump and Putin.jpg">
+  <img src="#" alt="">
+  <h2>Popular#3</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Obama.jpg" alt="">
+  <h2>For kids #4</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Magnus carlsen.jpg" alt="">
+  <h2>For teenagers #5</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Boat.jpg" alt="">
+  <h2>For adults #6</h2>
+</a>
+
+
+</section>
+
+<section class="Storsak">
+<a href="#">
+  <img src="Stann lee.jpg" alt="">
+  <h2>For the elderly #7</h2>
+</a>
+
+
+</section>
+
+
+
+
+
+  </main>
+
+  <footer>
+
+  </footer>
+</body>
+</html>
 
 </header>
   <main>
