Starter å ligne på noe men har litt vansker med logoen

--- a/IT1/Netthandel/Action.html
+++ b/IT1/Netthandel/Action.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Netthandel</title>
 
-<h2>Action</h2>
+<h2>Netthandle</h2>
 
   </head>
   <body>
@@ -13,16 +13,102 @@
 
 
 <header>
-<h2>Genre</h2>
+
+<h2>Genre </h2>
 
   <ul>
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="Action.html">Action</a> </li>
     <li> <a href="Drama.html">Drama</a> </li>
-    <li> <a href="Fantasy">Fantasy</a> </li>
+    <li> <a href="Fantasy.html">Fantasy</a> </li>
   </ul>
 
+  <header>
 
+
+
+
+
+  </header>
+
+  <main>
+
+
+<section class="Middelssak">
+<a href="#">
+  <img src="California.jpg" alt="">
+  <h2>Best series #1</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Trump.jpg" alt="">
+  <h2>Best seller #2</h2>
+</a>
+
+
+</section>
+
+
+<section class="Litensak">
+<a href="trump and Putin.jpg">
+  <img src="#" alt="">
+  <h2>Popular#3</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Obama.jpg" alt="">
+  <h2>For kids #4</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Magnus carlsen.jpg" alt="">
+  <h2>For teenagers #5</h2>
+</a>
+
+
+</section>
+
+<section class="Litensak">
+<a href="#">
+  <img src="Boat.jpg" alt="">
+  <h2>For adults #6</h2>
+</a>
+
+
+</section>
+
+<section class="Storsak">
+<a href="#">
+  <img src="Stann lee.jpg" alt="">
+  <h2>For the elderly #7</h2>
+</a>
+
+
+</section>
+
+
+
+
+
+  </main>
+
+  <footer>
+
+  </footer>
+</body>
+</html>
 
 </header>
   <main>
