--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -2,9 +2,9 @@
 <html lang="nb" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Netthandel</title>
+    <title>Netthandle</title>
 
-<h2>Netthandle</h2>
+<img src="Winterbournelogo.png" alt="">
 
   </head>
   <body>
@@ -14,18 +14,20 @@
 
 <header>
 
-<h2>Genre </h2>
+<h1>Genre </h1>
+
+
 
   <ul>
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="Action.html">Action</a> </li>
     <li> <a href="Drama.html">Drama</a> </li>
-    <li> <a href="Fantasy">Fantasy</a> </li>
+    <li> <a href="Fantasy.html">Fantasy</a> </li>
   </ul>
 
+
+
   <header>
-
-
 
 
 
@@ -34,65 +36,44 @@
   <main>
 
 
-<section class="Middelssak">
+  <h2>Best seller #1</h2>
+<section class="litenMiddels">
 <a href="#">
-  <img src="California.jpg" alt="">
-  <h2>Best book of the century #1</h2>
+  <img src="A Tale of Two Cites.jpg" alt="">
 </a>
-
-
 </section>
 
-<section class="Litensak">
+<h2>Best seller #2</h2>
+<section class="litenMiddels">
 <a href="#">
-  <img src="Trump.jpg" alt="">
-  <h2>Best seller #2</h2>
-</a>
-
-
+  <img src="The Lord of The Rings.jpg" alt="">
+  </a>
 </section>
 
 
-<section class="Litensak">
-<a href="trump and Putin.jpg">
-  <img src="#" alt="">
   <h2>Popular#3</h2>
+<section class="litenMiddels">
+<a href="#">
+  <img src="Littleprince.jpg" alt="">
+</a>
+</section>
+
+
+<h2>Best seller#4</h2>
+<section class="litenMiddels">
+<a href="#">
+  <img src="Harry Potter and the Phil.jpeg" alt="">
+
 </a>
 
 
 </section>
 
-<section class="Litensak">
+<h2>best seller #5</h2>
+<section class="litenMiddels">
 <a href="#">
-  <img src="Obama.jpg" alt="">
-  <h2>For kids #4</h2>
-</a>
+  <img src="The Hobbit.jpg" alt="">
 
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Magnus carlsen.jpg" alt="">
-  <h2>For teenagers #5</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Boat.jpg" alt="">
-  <h2>For adults #6</h2>
-</a>
-
-
-</section>
-
-<section class="Storsak">
-<a href="#">
-  <img src="Stann lee.jpg" alt="">
-  <h2>For the elderly #7</h2>
 </a>
 
 
