--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Netthandle</title>
 
-<img src="Winterbournelogo.png" alt="">
 
   </head>
   <body>
@@ -19,25 +18,21 @@
 
 
   <ul>
+    <img src="Winterbournelogo.png" alt="">
+
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="Action.html">Action</a> </li>
     <li> <a href="Drama.html">Drama</a> </li>
     <li> <a href="Fantasy.html">Fantasy</a> </li>
   </ul>
 
-
-
-  <header>
-
-
-
-  </header>
+</header>
 
   <main>
 
 
   <h2>Best seller #1</h2>
-<section class="litenMiddels">
+<section class="litenMiddels"><div class="Alpha"
 <a href="#">
   <img src="A Tale of Two Cites.jpg" alt="">
 </a>
@@ -65,8 +60,6 @@
   <img src="Harry Potter and the Phil.jpeg" alt="">
 
 </a>
-
-
 </section>
 
 <h2>best seller #5</h2>
