Starter å ligne noe

--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -28,42 +28,47 @@
 
 </header>
 
-  <main>
+  <main class="grid-container">
 
 
-  <h2>Best seller #1</h2>
+
 <section class="litenMiddels"><div class="Alpha"
+  <h2>Best seller #1</h2>
 <a href="#">
   <img src="A Tale of Two Cites.jpg" alt="">
 </a>
 </section>
 
-<h2>Best seller #2</h2>
+
 <section class="litenMiddels">
+  <h2>Best seller #2</h2>
 <a href="#">
   <img src="The Lord of The Rings.jpg" alt="">
   </a>
 </section>
 
 
-  <h2>Popular#3</h2>
+
 <section class="litenMiddels">
+    <h2>Popular#3</h2>
 <a href="#">
   <img src="Littleprince.jpg" alt="">
 </a>
 </section>
 
 
-<h2>Best seller#4</h2>
+
 <section class="litenMiddels">
+  <h2>Best seller#4</h2>
 <a href="#">
   <img src="Harry Potter and the Phil.jpeg" alt="">
 
 </a>
 </section>
 
-<h2>best seller #5</h2>
+
 <section class="litenMiddels">
+  <h2>best seller #5</h2>
 <a href="#">
   <img src="The Hobbit.jpg" alt="">
 
