--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -21,10 +21,20 @@
     <img src="Winterbournelogo.png" alt="">
 
     <li> <a href="index.html">Home</a> </li>
-    <li> <a href="Action.html">Action</a> </li>
-    <li> <a href="Drama.html">Drama</a> </li>
-    <li> <a href="Fantasy.html">Fantasy</a> </li>
+
+    <div class="dropdown">
+      <button class="dropbtn">Genre </button>
+      <div class="dropdown-content">
+        <a href="Action.html">Action</a>
+        <a href="Drama.html">Drama</a>
+        <a href="Fantasy.html">Fantasy</a>
+      </div>
+    </div>
+
+
   </ul>
+
+
 
 </header>
 
@@ -50,7 +60,7 @@
 
 
 <section class="litenMiddels">
-    <h2>Popular#3</h2>
+    <h2>Best seller#3</h2>
 <a href="#">
   <img src="Littleprince.jpg" alt="">
 </a>
@@ -68,7 +78,7 @@
 
 
 <section class="litenMiddels">
-  <h2>best seller #5</h2>
+  <h2>Best seller #5</h2>
 <a href="#">
   <img src="The Hobbit.jpg" alt="">
 
