--- a/IT1/Netthandel/Drama.html
+++ b/IT1/Netthandel/Drama.html
@@ -16,13 +16,22 @@
 
 <h2>Genre </h2>
 
-  <ul>
-    <img src="Winterbournelogo.png" alt="">
-    <li> <a href="index.html">Home</a> </li>
-    <li> <a href="Action.html">Action</a> </li>
-    <li> <a href="Drama.html">Drama</a> </li>
-    <li> <a href="Fantasy.html">Fantasy</a> </li>
-  </ul>
+<ul>
+  <img src="Winterbournelogo.png" alt="">
+
+  <li> <a href="index.html">Home</a> </li>
+
+  <div class="dropdown">
+    <button class="dropbtn">Genre</button>
+    <div class="dropdown-content">
+      <a href="Action.html">Action</a>
+      <a href="Drama.html">Drama</a>
+      <a href="Fantasy.html">Fantasy</a>
+    </div>
+  </div>
+
+
+</ul>
 
   <header>
 
