--- a/IT1/Netthandel/Action.html
+++ b/IT1/Netthandel/Action.html
@@ -8,7 +8,8 @@
 
   </head>
   <body>
-<link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="Stylesheet2.css">
+
 
 
 
@@ -20,6 +21,7 @@
   <img src="Winterbournelogo.png" alt="">
 
   <li> <a href="index.html">Home</a> </li>
+  <li> <a href="About Us.html">About Us</a> </li>
 
   <div class="dropdown">
     <button class="dropbtn">Genre</button>
@@ -28,104 +30,28 @@
       <a href="Drama.html">Drama</a>
       <a href="Fantasy.html">Fantasy</a>
     </div>
-  </div>
+
 
 
 </ul>
+<main>
 
-  <header>
-
-
-
-
-
-  </header>
-
-  <main>
-
-
-<section class="Middelssak">
-<a href="#">
-  <img src="California.jpg" alt="">
-  <h2>Best series #1</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Trump.jpg" alt="">
-  <h2>Best seller #2</h2>
-</a>
-
-
-</section>
-
-
-<section class="Litensak">
-<a href="trump and Putin.jpg">
-  <img src="#" alt="">
-  <h2>Popular#3</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Obama.jpg" alt="">
-  <h2>For kids #4</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Magnus carlsen.jpg" alt="">
-  <h2>For teenagers #5</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Boat.jpg" alt="">
-  <h2>For adults #6</h2>
-</a>
-
-
-</section>
-
-<section class="Storsak">
-<a href="#">
-  <img src="Stann lee.jpg" alt="">
-  <h2>For the elderly #7</h2>
-</a>
-
-
-</section>
+  <section class="grid-container">
+    <img src="The return of the king.jpg" alt="">
+    <p>
+    The Companions of the Ring have become involved in separate adventures as the quest continues. Aragorn, revealed as the hidden heir of the ancient Kings of the West, joined with the Riders of Rohan against the forces of Isengard, and took part in the desperate victory of the Hornburg. Merry and Pippin, captured by Orcs, escaped into Fangorn Forest and there encountered the Ents. Gandalf returned, miraculously, and defeated the evil wizard, Saruman. Meanwhile, Sam and Frodo progressed towards Mordor to destroy the Ring, accompanied by SmEagol--Gollum, still obsessed by his 'precious'. After a battle with the giant spider, Shelob, Sam left his master for dead; but Frodo is still alive--in the hands of the Orcs. And all the time the armies of the Dark Lord are massing. J.R.R. Tolkien's great work of imaginative fiction has been labeled both a heroic romance and a classic fantasy fiction. By turns comic and homely, epic and diabolic, the narrative moves through countless changes of scene and character in an imaginary world which is totally convincing in its detail.
+    </p>
+  </section>
 
 
 
-
-
-  </main>
-
-  <footer>
-
-  </footer>
-</body>
-</html>
+</main>
 
 </header>
-  <main>
 
-grid
+<footer>
 
-  </main>
+  </footer>
+<body>
 
   </body>
-</html>
