--- a/IT1/Netthandel/Drama.html
+++ b/IT1/Netthandel/Drama.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="Stylesheet2.css">
 
 
 
@@ -20,6 +20,7 @@
   <img src="Winterbournelogo.png" alt="">
 
   <li> <a href="index.html">Home</a> </li>
+  <li> <a href="About Us.html">About Us</a> </li>
 
   <div class="dropdown">
     <button class="dropbtn">Genre</button>
@@ -28,104 +29,32 @@
       <a href="Drama.html">Drama</a>
       <a href="Fantasy.html">Fantasy</a>
     </div>
-  </div>
+
 
 
 </ul>
 
-  <header>
+<main>
+
+  <section class="grid-container">
+    <img src="Drama Book.jpg" alt="">
+    <p>
+    Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+    </p>
+  </section>
 
 
 
-
+</main>
 
   </header>
 
-  <main>
-
-
-<section class="Middelssak">
-<a href="#">
-  <img src="California.jpg" alt="">
-  <h2>Best series #1</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Trump.jpg" alt="">
-  <h2>Best seller #2</h2>
-</a>
-
-
-</section>
-
-
-<section class="Litensak">
-<a href="trump and Putin.jpg">
-  <img src="#" alt="">
-  <h2>Popular#3</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Obama.jpg" alt="">
-  <h2>For kids #4</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Magnus carlsen.jpg" alt="">
-  <h2>For teenagers #5</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Boat.jpg" alt="">
-  <h2>For adults #6</h2>
-</a>
-
-
-</section>
-
-<section class="Storsak">
-<a href="#">
-  <img src="Stann lee.jpg" alt="">
-  <h2>For the elderly #7</h2>
-</a>
-
-
-</section>
-
-
-
-
-
-  </main>
 
   <footer>
 
   </footer>
-</body>
-</html>
+<body>
 
-</header>
-  <main>
 
-grid
-
-  </main>
 
   </body>
-</html>
