--- a/IT1/Netthandel/Fantasy.html
+++ b/IT1/Netthandel/Fantasy.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="Stylesheet2.css">
 
 
 
@@ -20,6 +20,7 @@
   <img src="Winterbournelogo.png" alt="">
 
   <li> <a href="index.html">Home</a> </li>
+  <li> <a href="About Us.html">About Us</a> </li>
 
   <div class="dropdown">
     <button class="dropbtn">Genre</button>
@@ -32,100 +33,27 @@
 
 
 </ul>
+<main>
 
-  <header>
+  <section class="grid-container">
+    <img src="Percy Jackson 2.jpg" alt="">
+    <p>
+    Twelve-year-old Percy Jackson is on the most dangerous quest of his life. With the help of a satyr and a daughter of Athena, Percy must journey across the United States to catch a thief who has stolen the original weapon of mass destruction — Zeus’ master bolt. Along the way, he must face a host of mythological enemies determined to stop him. Most of all, he must come to terms with a father he has never known, and an Oracle that has warned him of betrayal by a friend.
+    </p>
+  </section>
 
 
 
-
+</main>
 
   </header>
 
-  <main>
+
+<body>
 
 
-<section class="Middelssak">
-<a href="#">
-  <img src="California.jpg" alt="">
-  <h2>Best series #1</h2>
-</a>
+   </body>
+<footer>
 
 
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Trump.jpg" alt="">
-  <h2>Best seller #2</h2>
-</a>
-
-
-</section>
-
-
-<section class="Litensak">
-<a href="trump and Putin.jpg">
-  <img src="#" alt="">
-  <h2>Popular#3</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Obama.jpg" alt="">
-  <h2>For kids #4</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Magnus carlsen.jpg" alt="">
-  <h2>For teenagers #5</h2>
-</a>
-
-
-</section>
-
-<section class="Litensak">
-<a href="#">
-  <img src="Boat.jpg" alt="">
-  <h2>For adults #6</h2>
-</a>
-
-
-</section>
-
-<section class="Storsak">
-<a href="#">
-  <img src="Stann lee.jpg" alt="">
-  <h2>For the elderly #7</h2>
-</a>
-
-
-</section>
-
-
-
-
-
-  </main>
-
-  <footer>
-
-  </footer>
-</body>
-</html>
-
-</header>
-  <main>
-
-grid
-
-  </main>
-
-  </body>
-</html>
+</footer>
