--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -11,6 +11,8 @@
 
 
 
+
+
 <header>
 
 <h1>Genre </h1>
@@ -21,6 +23,7 @@
     <img src="Winterbournelogo.png" alt="">
 
     <li> <a href="index.html">Home</a> </li>
+    <li> <a href="About Us.html">About Us</a> </li>
 
     <div class="dropdown">
       <button class="dropbtn">Genre </button>
@@ -33,6 +36,8 @@
 
 
   </ul>
+
+
 
 
 
@@ -83,8 +88,14 @@
   <img src="The Hobbit.jpg" alt="">
 
 </a>
+</section>
 
+<section class="litenMiddels">
+  <h2>Best seller#6</h2>
+<a href="#">
+  <img src="Percy Jackson.jpg" alt="">
 
+</a>
 </section>
 
 
@@ -100,11 +111,7 @@
 </html>
 
 </header>
-  <main>
 
-grid
-
-  </main>
 
   </body>
 </html>
