Greier ikke å fikse logoen

--- a/IT1/Netthandel/Drama.html
+++ b/IT1/Netthandel/Drama.html
@@ -41,9 +41,14 @@
     <p>
     Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
     </p>
+
   </section>
 
-
+<section class="grid-container">
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/mHlzhHaAQjA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+</section>
 
 </main>
 
