--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -20,7 +20,7 @@
 
 
   <ul>
-    <img src="Winterbournelogo.png" alt="">
+    <img src="Winterbournelogo3.png" alt="">
 
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="About Us.html">About Us</a> </li>
