--- a/IT1/Netthandel/Fantasy.html
+++ b/IT1/Netthandel/Fantasy.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Netthandel</title>
 
-<h2>Netthandle</h2>
 
   </head>
   <body>
@@ -14,10 +13,10 @@
 
 <header>
 
-<h2>Genre </h2>
+<h2>Fantasy </h2>
 
 <ul>
-  <img src="Winterbournelogo.png" alt="">
+  <img src="Winterbournelogo2.png" alt="">
 
   <li> <a href="index.html">Home</a> </li>
   <li> <a href="About Us.html">About Us</a> </li>
