--- a/IT1/Netthandel/index.html
+++ b/IT1/Netthandel/index.html
@@ -15,12 +15,10 @@
 
 <header>
 
-<h1>Genre </h1>
-
-
+<h1>Winterbourne's Book shop</h1>
 
   <ul>
-    <img src="Winterbournelogo3.png" alt="">
+    <img src="Winterbournelogo2.png" alt="">
 
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="About Us.html">About Us</a> </li>
