--- a/IT1/uke_7_spørringer/Dynamisknettside.html
+++ b/IT1/uke_7_spørringer/Dynamisknettside.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>The Oscars</title>
-    <link rel="stylesheet" href="Stylesheet.css">
+    <link rel="stylesheet" href="stil.css">
   </head>
-  <body> 
+  <body>
     <header>
       <nav>
         <a href="#">Hjem</a>
