--- a/IT1/Vurdering 30.april/AboutUs.html
+++ b/IT1/Vurdering 30.april/AboutUs.html
@@ -32,7 +32,7 @@
     onclick="w3_close()">Close &times;</button>
     <a href="index.html" class="w3-bar-item w3-button">Home</a>
     <a href="Shop.html" class="w3-bar-item w3-button">Shop</a>
-    <a href="Explore.html" class="w3-bar-item w3-button">Explore 3</a>
+    <a href="Explore.html" class="w3-bar-item w3-button">Explore </a>
     <a href="AboutUs.html" class="w3-bar-item w3-button">About Us</a>
 
   </div>
