--- a/IT1/Vurdering 30.april/index.html
+++ b/IT1/Vurdering 30.april/index.html
@@ -65,12 +65,7 @@
   </script>
 
     </header>
-
-    <body>
-
-  <main>
   <hr>
-</header>
 
 
 <hr>
@@ -90,15 +85,21 @@
 
 <div class="slideshow-container">
   <div class="mySlides fade">
-  <img src="12th Doc.jpg" style="width:100%">
+  <img src="Wallpaper1.jpg" style="width:100%">
 </div>
   </div>
 
 <div class="slideshow-container">
   <div class="mySlides fade">
-      <img src="Ninth Doc.jpg" style="width:100%">
+      <img src="Wallpaper2.jpg" style="width:100%">
     </div>
   </div>
+
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+        <img src="Wallpaper3.jpg" style="width:100%">
+      </div>
+    </div>
 
     <!-- Next and previous buttons -->
     <a class="prev" onclick="changeSlides(-1)">&#10094;</a>
@@ -156,7 +157,7 @@ function showSlides() {
     <div class="column">
       <div class="content">
         <img src="Daleks.jpg" alt="Daleks" style="width:100%">
-        <a href="#">Link her</a>
+        <a href="FunFacts.html">Link her</a>
         <h3>Fun Facts</h3>
         <p>Lorem ipsum..</p>
       </div>
